<?xml version="1.0" ?>
<package format="2">
    <name>dbw_ui</name>
    <version>0.0.1</version>
    <description>The dbw_ui package</description>

    <maintainer email="xiaodong.zhao@warwick.ac.uk">Xiaodong Zhao</maintainer>
    <license>BSD</license>
    <author email="xiaodong.zhao@warwick.ac.uk">Xiaodong Zhao</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>rqt_gui</build_depend>
    <build_depend>dataspeed_ulc_msgs</build_depend>
    <build_depend>dbw_mkz_msgs</build_depend>

    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>rqt_gui</build_export_depend>
    <build_export_depend>dataspeed_ulc_msgs</build_export_depend>
    <build_export_depend>dbw_mkz_msgs</build_export_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>rqt_gui</exec_depend>
    <exec_depend>dataspeed_ulc_msgs</exec_depend>
    <exec_depend>dbw_mkz_msgs</exec_depend>
    <export>
        <rqt_gui plugin="${prefix}/plugin.xml" />
    </export>
</package>